fixed feedback round 2

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,40 +1,86 @@
 <footer>
-  <div class="footer-flex">
-    <div class="footer-menu">
-      <div class="footer-menu-items">
-        <a href="#" class="footer-link-bold">Wie wij zijn</a
-        ><a href="#" class="footer-link-small">Wie wij zijn</a>
+ 
+    <div class="footer-flex">
+      <div class="footer-menu">
+        <div class="footer-menu-items">
+          <a href="#" class="footer-link-bold">Wie wij zijn</a
+          ><a href="#" class="footer-link-small">Wie wij zijn</a>
+        </div>
+        <div class="footer-menu-items">
+          <a href="#" class="footer-link-bold">Wat wij doen</a
+          ><a href="#" class="footer-link-small">Wat wij doen</a>
+          <a href="#" class="footer-link-small">Hoe wij werken</a>
+          <a href="#" class="footer-link-small">Connect to perform</a>
+        </div>
+        <div class="footer-menu-items">
+          <a href="#" class="footer-link-bold">Contact</a
+          ><a href="#" class="footer-link-small">Contact</a>
+          <a href="#" class="footer-link-small">Werken bij</a>
+        </div>
+        <div class="footer-menu-items">
+          <a href="#" class="footer-link-bold">Volg ons</a
+          ><a href="#" class="footer-link-small"
+            ><img src="/assets/images/LinkedIn.png" alt=""
+          /></a>
+        </div>
       </div>
-      <div class="footer-menu-items">
-        <a href="#" class="footer-link-bold">Wat wij doen</a
-        ><a href="#" class="footer-link-small">Wat wij doen</a>
-        <a href="#" class="footer-link-small">Hoe wij werken</a>
-        <a href="#" class="footer-link-small">Connect to perform</a>
-      </div>
-      <div class="footer-menu-items">
-        <a href="#" class="footer-link-bold">Contact</a
-        ><a href="#" class="footer-link-small">Contact</a>
-        <a href="#" class="footer-link-small">Werken bij</a>
-      </div>
-      <div class="footer-menu-items">
-        <a href="#" class="footer-link-bold">Volg ons</a
-        ><a href="#" class="footer-link-small"
-          ><img src="/assets/images/LinkedIn.png" alt=""
-        /></a>
+      <div class="connect-to-perform">
+        <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
+        <p class="btn btn-full Lichtblauw">
+          <a href="#">Ik schrijf me in!</a>
+        </p>
       </div>
     </div>
-    <div class="connect-to-perform">
-      <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
-      <p class="btn btn-full Lichtblauw">
-        <a href="#">Ik schrijf me in!</a>
+    <div class="Groen footer footer-bottom">
+      <p>
+        Ontwerp: <a href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
+        Daan Boertien
       </p>
+      <p>2022 All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
+    </div>
+ 
+</footer>
+
+<div class="footer-desktop">
+
+  <div class="footer-menu-flex">
+    <div class="footer-menu-items menu1">
+      <a href="#" class="footer-link-bold">Wie wij zijn</a
+      ><a href="#" class="footer-link-small">Wie wij zijn</a>
+    </div>
+    <div class="footer-menu-items menu2">
+      <a href="#" class="footer-link-bold">Wat wij doen</a
+      ><a href="#" class="footer-link-small">Wat wij doen</a>
+      <a href="#" class="footer-link-small">Hoe wij werken</a>
+      <a href="#" class="footer-link-small">Connect to perform</a>
+    </div>
+    <div class="footer-menu-items menu3">
+      <a href="#" class="footer-link-bold">Contact</a
+      ><a href="#" class="footer-link-small">Contact</a>
+      <a href="#" class="footer-link-small">Werken bij</a>
+    </div>
+    <div class="footer-menu-items menu4">
+      <a href="#" class="footer-link-bold">Volg ons</a
+      ><a href="#" class="footer-link-small"
+        ><img src="/assets/images/LinkedIn.png" alt=""
+      /></a>
     </div>
   </div>
-  <div class="Groen footer footer-bottom">
-    <p>
-      Ontwerp: <a href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
-      Daan Boertien
+  
+  <div class="connect">
+    <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
+    <p class="btn btn-full Lichtblauw">
+      <a href="#">Ik schrijf me in!</a>
     </p>
-    <p>2022 All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
   </div>
-</footer>
+
+  
+  <p class="ontwerp">
+    Ontwerp: <a href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
+    Daan Boertien
+  </p>
+  <p class="disclaimer">©{{"now" | date: "%Y"}} All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
+  <div class="green-space"></div>
+  </div>
+  
+</div>
