--- a/_layouts/teammembers.html
+++ b/_layouts/teammembers.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+menu: menu-active
 ---
 
-<main>
+<main class="bg-grey">
   {% include button-omhoog.html %}
   <section class="team-member">
     <div class="innercontainer innercontainer--werken-bij">
