--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -66,9 +66,9 @@ nav {
   transform: rotate(180deg);
 }
 
-.main-menu-link:link,
-.main-menu-link:visited,
-.main-menu-link:active {
+// .main-menu-link:link,
+.main-menu-link:visited {
+  // .main-menu-link:active {
   color: var(--crl-black);
 }
 
