added hoe wij werken to cms

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -473,6 +473,10 @@ main li::before {
   padding-bottom: 1em;
 }
 
+.footer-desktop {
+  display: none;
+}
+
 footer h2 {
   color: white;
   line-height: 1.4;
