--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -553,7 +553,7 @@ main {
   }
   .grid-layout {
     display: grid;
-
+    margin-bottom: 2em;
     @media (min-width: 768px) {
       h2 {
         margin-top: 0;
@@ -627,7 +627,7 @@ main {
   border-radius: 0px var(--border-radius) 0px var(--border-radius);
   @media (min-width: 768px) {
     max-width: 300px;
-    margin-bottom: 2em;
+    margin-bottom: auto;
     border-radius: 0px var(--border-radius-desktop) 0px
       var(--border-radius-desktop);
   }
@@ -647,6 +647,11 @@ main {
   overflow: hidden;
 }
 
+.card p {
+  position: relative;
+  z-index: 2;
+}
+
 .card .bold {
   font-weight: 600;
 }
@@ -656,5 +661,12 @@ main {
   padding-left: 1.5em;
   padding-bottom: 1em;
   padding-right: 1.5em;
-  z-index: 2;
+  z-index: 10;
+}
+
+.page-contact {
+  box-shadow: 0px -200px 0px 0px var(--clr-light-grey);
+  h2 {
+    margin-top: 4em;
+  }
 }
