--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -94,7 +94,7 @@ nav {
   padding: 0.4rem 2rem;
   position: relative;
   text-decoration: none;
-  transition-duration: 0.5s;
+  // transition-duration: 0.5s;
 }
 
 .dropdown {
