--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -243,7 +243,7 @@ section {
 }
 .photo-wrapper::before {
   position: absolute;
-  content: url("/assets/images/ul-arrow-white.svg");
+  content: url("");
   background: center/contain no-repeat url("/assets/images/ul-arrow-white.svg");
   background-size: 25%;
   color: white;
