--- a/_includes/button-omhoog.html
+++ b/_includes/button-omhoog.html
@@ -1,4 +1,4 @@
-<a href="#nav" class="button-omhoog-link">
+<a href="#top" class="button-omhoog-link">
   <svg
     id="button-omhoog"
     data-name="Laag 3"
