--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div class="fixed-wrapper">
-  <div class="fixed-menu">
+  <div class="fixed-menu" id="top">
     <nav role="navigation" class="extracorner" id="nav">
       <a class="mainlogolink" href="/">
         <img
