--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,7 +56,7 @@ section {
   display: block;
   max-width: 100%;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
 }
 .actie-image img {
   height: 100%;
@@ -670,4 +670,13 @@ main {
   h2 {
     margin-top: 4em;
   }
+}
+
+.footer a:link,
+.footer a:active,
+.footer a:visited,
+.card a:link,
+.card a:active,
+.card a:visited {
+  color: white;
 }
