--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -30,6 +30,9 @@ section {
   max-width: 656px;
   margin: 0 auto;
 }
+.innercontainer--ctp {
+  max-width: 560px;
+}
 .landing {
   display: flex;
   flex-direction: column-reverse;
