--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -75,6 +75,9 @@
   .landing--yellow {
     box-shadow: 0 -300px 0 0 var(--clr-yellow);
   }
+  .landing--red {
+    box-shadow: 0 -300px 0 0 var(--clr-red);
+  }
 
   .img-overlay-wrap {
     flex: 1 1 0px;
@@ -463,6 +466,9 @@
   .innercontainer--werken-bij {
     max-width: 756px;
   }
+  .innercontainer--ctp {
+    max-width: 650px;
+  }
 }
 
 @media (min-width: 1100px) {
@@ -477,6 +483,9 @@
   }
   .innercontainer--werken-bij {
     max-width: 856px;
+  }
+  .innercontainer--ctp {
+    max-width: 756px;
   }
   .contact {
     img {
