add border left and put swirl 1px right

--- a/_sass/helperclasses.scss
+++ b/_sass/helperclasses.scss
@@ -64,6 +64,10 @@
 .bg-rood {
   background-color: var(--clr-red);
 }
+
+.border-left-green {
+  border-left: 2px solid var(--green);
+}
 .bold {
   font-weight: 500;
 }
