--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -109,7 +109,7 @@
     display: block;
     position: absolute;
     top: 0px;
-    right: 0;
+    right: -1px;
     z-index: 3;
     height: 100%;
     width: 120px;
