--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,7 @@
 <footer>
  
     <div class="footer-flex">
-      <div class="footer-menu">
-        <div class="footer-menu-items">
-          <a href="{{site.data.nav.wie-wij-zijn}}" class="footer-link-bold">Wie wij zijn</a
-          ><a href="{{site.data.nav.wie-wij-zijn}}" class="footer-link-small">Wie wij zijn</a>
-        </div>
-        <div class="footer-menu-items">
-          <a href="{{site.data.nav.wat-wij-doen}}" class="footer-link-bold">Wat wij doen</a
-          ><a href="{{site.data.nav.wat-wij-doen}}" class="footer-link-small">Wat wij doen</a>
-          <a href="{{site.data.nav.hoe-wij-werken}}" class="footer-link-small">Hoe wij werken</a>
-          <a href="{{site.data.nav.connect-to-perform}}" class="footer-link-small">Connect to perform</a>
-        </div>
-        <div class="footer-menu-items">
-          <a href="{{site.data.nav.contact}}" class="footer-link-bold">Contact</a
-          ><a href="{{site.data.nav.contact}}" class="footer-link-small">Contact</a>
-          <a href="#" class="footer-link-small">Werken bij</a>
-        </div>
-        <div class="footer-menu-items">
-          <a href="{{site.data.nav.werken-bij}}" class="footer-link-bold">Volg ons</a
-          ><a href="https://nl.linkedin.com/company/human-connection" target="_blank" class="footer-link-small"
-            ><img src="/assets/images/LinkedIn.png" alt=""
-          /></a>
-        </div>
-      </div>
+ 
       <div class="connect-to-perform">
         <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
         <p class="btn btn-full Lichtblauw">
@@ -43,7 +21,7 @@
 
 <div class="footer-desktop">
 
-  <div class="footer-menu-flex">
+  {%- comment -%} <div class="footer-menu-flex">
     <div class="footer-menu-items menu1">
       <a href="{{site.data.nav.wie-wij-zijn}}" class="footer-link-bold">Wie wij zijn</a
       ><a href="{{site.data.nav.wie-wij-zijn}}" class="footer-link-small">Wie wij zijn</a>
@@ -65,6 +43,13 @@
         ><img src="/assets/images/LinkedIn.png" alt=""
       /></a>
     </div>
+  </div> {%- endcomment -%}
+
+  <div class="volgons">
+    <p class="bold margin-bottom-0">Volg ons</p
+        ><a href="https://nl.linkedin.com/company/human-connection" target="_blank" class="footer-link-small"
+          ><img src="/assets/images/LinkedIn.png" alt=""
+        /></a>
   </div>
   
   <div class="connect">
