--- a/_sass/helperclasses.scss
+++ b/_sass/helperclasses.scss
@@ -57,6 +57,10 @@
   }
 }
 
+.lightestblue {
+  color: rgba(236, 247, 253, 1);
+}
+
 .bg-grey {
   background-color: var(--clr-light-grey);
 }
@@ -65,6 +69,9 @@
   background-color: var(--clr-red);
 }
 
+.bg-lightblue {
+  background-color: var(--clr-lightblue);
+}
 .border-left-green {
   border-left: 2px solid var(--green);
 }
@@ -95,6 +102,9 @@
 
 .margin-bottom-1em {
   margin-bottom: 1em;
+}
+.margin-bottom-0 {
+  margin-bottom: 0;
 }
 .margin-bottom-2 {
   margin-bottom: 2em;
@@ -138,4 +148,13 @@
 
 .blue-shadow {
   box-shadow: 0px -200px 0 0 var(--clr-darkblue);
+}
+
+.lightblue-shadow {
+  box-shadow: 0px -200px 0 0 var(--clr-lightblue);
+}
+
+.wat-wij-doen h2,
+.wat-wij-doen p {
+  color: rgba(236, 247, 253, 1);
 }
