--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -78,6 +78,9 @@
   .landing--red {
     box-shadow: 0 -300px 0 0 var(--clr-red);
   }
+  .landing--lightblue {
+    box-shadow: 0 -300px 0 0 var(--clr-lightblue);
+  }
 
   .img-overlay-wrap {
     flex: 1 1 0px;
@@ -217,6 +220,11 @@
     box-shadow: 0 calc(var(--border-radius-desktop) * -1) 0 0
       var(--clr-darkblue);
   }
+
+  .watwijdoen-lightblue::after {
+    box-shadow: 0 calc(var(--border-radius-desktop) * -1) 0 0
+      var(--clr-lightblue);
+  }
   .wwd-grid {
     grid-template-rows: 3;
   }
@@ -294,7 +302,7 @@
   }
 
   .actievraag-content {
-    flex: 1;
+    flex: 0.6;
     padding-top: 0em;
     // padding-left: 10em;
     padding-bottom: 0;
@@ -370,48 +378,33 @@
       // align-self: end;
     }
   }
+  .page-contact h2 {
+    margin-top: 1em;
+  }
   footer {
     display: none;
   }
   .footer-desktop {
     width: 100%;
     display: grid;
-    gap: 2em;
+    gap: 0 2em;
     color: white;
     margin-bottom: 5em;
     grid-template-areas:
-      "white-space green-space menu   menu   menu   menu      connect"
-      "white-space green-space  disclaimer disclaimer disclaimer ontwerp ontwerp";
-    grid-template-columns: 1fr 3fr 3fr 3fr 3fr 3fr 6fr;
-    // grid-auto-columns: mincontent;
-    grid-template-rows: 2fr 1fr;
-    // .menu1 {
-    //   grid-area: menu1;
-    //   margin-top: 3em;
-    //   width: min(80px, max-content);
-    // }
-    // .menu2 {
-    //   grid-area: menu2;
-    //   margin-top: 3em;
-    //   width: min(80px, max-content);
-    // }
-    // .menu3 {
-    //   grid-area: menu3;
-    //   margin-top: 3em;
-    //   width: min(80px, max-content);
-    // }
-    // .menu4 {
-    //   grid-area: menu4;
-    //   margin-top: 3em;
-    //   width: min(80px, max-content);
-    // }
+      "white-space green-space . connect"
+      "white-space green-space volgons connect"
+      "white-space green-space disclaimer connect"
+      "white-space green-space ontwerp connect"
+      ". . . .";
+    grid-template-columns: minmax(30px, 60px) minmax(30px, 45px) 1fr 1fr;
+    grid-template-rows: 2em auto auto auto 2em;
 
-    .footer-menu-flex {
-      grid-area: menu;
-      display: flex;
-      gap: 1em;
-      padding-top: 3em;
-    }
+    // .footer-menu-flex {
+    //   grid-area: menu;
+    //   display: flex;
+    //   gap: 1em;
+    //   padding-top: 3em;
+    // }
     .footer-menu-items a {
       display: block;
       margin-bottom: 0.5em;
@@ -431,9 +424,9 @@
     .connect {
       grid-area: connect;
       background: var(--clr-darkblue);
-      padding: 3em 2em 1em;
+      padding: 2em 2em 1em;
       border-bottom-left-radius: var(--border-radius-desktop);
-      min-width: 300px;
+      // min-width: 300px;
       h2 {
         margin-top: 0;
         color: white;
@@ -445,11 +438,20 @@
     }
     .ontwerp {
       grid-area: ontwerp;
-      margin-left: auto;
-      padding-right: 3em;
     }
     .disclaimer {
       grid-area: disclaimer;
+      margin-bottom: 0;
+    }
+    .volgons {
+      grid-area: volgons;
+      margin-bottom: 2em;
+      img {
+        width: 40px;
+        margin-left: 1em;
+      }
+      display: flex;
+      align-items: center;
     }
 
     a,
@@ -486,6 +488,10 @@
   }
   .innercontainer--ctp {
     max-width: 756px;
+  }
+  .landing-flex {
+    display: flex;
+    align-items: center;
   }
   .contact {
     img {
