made form and fixed issues

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,12 @@
       </div>
     </div>
     <div class="Groen footer footer-bottom">
+      <div class="volgons">
+    <p class="bold margin-bottom-0">Volg ons</p
+        ><a href="https://nl.linkedin.com/company/human-connection" target="_blank" class="footer-link-small"
+          ><img src="/assets/images/LinkedIn.png" alt=""
+        /></a>
+  </div>
       <p>
         Ontwerp: <a href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
         Daan Boertien
