add contact ctp to cms

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,14 +51,14 @@
     </div>
   </div> {%- endcomment -%}
 
-  <div class="volgons">
+  <div class="volgons fs-12px">
     <p class="bold margin-bottom-0">Volg ons</p
         ><a href="https://nl.linkedin.com/company/human-connection" target="_blank" class="footer-link-small"
           ><img src="/assets/images/LinkedIn.png" alt=""
         /></a>
   </div>
   
-  <div class="connect">
+  <div class="connect fs-12px">
     <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
     <p class="btn btn-full Lichtblauw btn-ctp">
       <a href="#">Ik schrijf me in!</a>
@@ -66,11 +66,11 @@
   </div>
 
   
-  <p class="ontwerp">
+  <p class="ontwerp fs-12px">
     Ontwerp: <a href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
     Daan Boertien
   </p>
-  <p class="disclaimer">©{{"now" | date: "%Y"}} All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
+  <p class="disclaimer fs-12px">©{{"now" | date: "%Y"}} All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
   <div class="green-space"></div>
   
   
