--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -170,6 +170,10 @@ section {
   flex-direction: column;
 }
 
+#watwijdoenpagina {
+  background-color: #ecf7fd;
+}
+
 .watwijdoenopsomming {
   background-color: var(--clr-lightestblue);
   margin-top: -3em;
