--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -206,7 +206,7 @@
       margin-left: auto;
     }
     .waardes {
-      max-width: 266px;
+      max-width: calc(66% - 2px);
     }
   }
   .watwijdoen {
