--- a/_sass/helperclasses.scss
+++ b/_sass/helperclasses.scss
@@ -95,6 +95,9 @@ button[type="submit"].clr-black {
   line-height: 1;
 }
 
+.relative {
+  position: relative;
+}
 .center {
   text-align: center;
 }
