--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       <div class="connect-to-perform">
         <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
         <p class="btn btn-full Lichtblauw">
-          <a href="#">Ik schrijf me in!</a>
+          <a href="{{site.data.nav.ctp-contact}}">Ik schrijf me in!</a>
         </p>
       </div>
     </div>
@@ -58,10 +58,10 @@
         /></a>
   </div>
   
-  <div class="connect fs-12px">
+  <div class="connect">
     <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
     <p class="btn btn-full Lichtblauw btn-ctp">
-      <a href="#">Ik schrijf me in!</a>
+      <a href="{{site.data.nav.ctp-contact}}">Ik schrijf me in!</a>
     </p>
   </div>
 
