fixed logo name

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
       <a class="mainlogolink" href="/">
         <img
           class="mainlogo"
-          src="/assets/images/upload/Logo Human Connection.svg"
+          src="/assets/images/upload/logo-human-connection.svg"
           alt=""
         />
       </a>
