--- a/_sass/helperclasses.scss
+++ b/_sass/helperclasses.scss
@@ -146,6 +146,10 @@ button[type="submit"].clr-black {
   font-size: 12px;
 }
 
+.fs-15px {
+  font-size: 15px;
+}
+
 .fs-16px {
   font-size: 16px;
 }
