added possibility to add link or not

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -54,9 +54,9 @@
               <li class="menu-filler menu-filler-contact"></li>
               <li><a href="{{site.data.nav.contact}}" class="dropdown-link">Contact</a></li>
               <li>
-                <a href="{{site.data.nav.werken-bij}}" class="dropdown-link"
+                {%if site.data.werken-bij-ons.vacature-open == true %}<a href="{{site.data.nav.werken-bij}}" class="dropdown-link"
                   >Werken bij ons</a
-                >
+          >{%endif%}
               </li>
             </ul>
           </li>
@@ -83,7 +83,7 @@
             <a href="#">Contact</a>
             <ul class="submenu-mobile">
               <li><a href="{{site.data.nav.contact}}">Contact</a></li>
-              <li><a href="{{site.data.nav.werken-bij}}">Werken bij ons</a></li>
+            {%if site.data.werken-bij-ons.vacature-open == true %}<li><a href="{{site.data.nav.werken-bij}}">Werken bij ons</a></li>{%endif%}
             </ul>
           </li>
         </ul>
