change styles based on user input (huge!)

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -10,3 +10,9 @@
 @import "buttons";
 @import "helperclasses";
 @import "mediaqueries";
+
+{% if site.data.werken-bij-ons.vacature-open == false %}
+.submenu-mobile-toggle3.open .submenu-mobile {
+    height: 1.9em;
+}
+{% endif %}
