--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -81,7 +81,7 @@
           </li>
           <li class="submenu-mobile-toggle3 li-outer">
             <a href="#">Contact</a>
-            <ul class="submenu-mobile">.submenu-mobile-toggle3.open .submenu-mobile
+            <ul class="submenu-mobile">
               <li><a href="{{site.data.nav.contact}}">Contact</a></li>
             {%if site.data.werken-bij-ons.vacature-open == true %}<li><a href="{{site.data.nav.werken-bij}}">Werken bij ons</a></li>{%endif%}
             </ul>
