changed feedback (links etc)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,8 +17,8 @@
         /></a>
   </div>
       <p>
-        Ontwerp: <a href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
-        Daan Boertien
+        Ontwerp: <a class="underline" href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
+        <a href="https://www.daanboertien.com" class="underline">Daan Boertien</a>
       </p>
       <p>2022 All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
     </div>
@@ -67,8 +67,8 @@
 
   
   <p class="ontwerp fs-12px">
-    Ontwerp: <a href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
-    Daan Boertien
+    Ontwerp: <a class="underline" href="https://studioryza.nl">studioryza.nl </a>| Realisatie:
+    <a href="https://www.daanboertien.com" class="underline">Daan Boertien</a>
   </p>
   <p class="disclaimer fs-12px">©{{"now" | date: "%Y"}} All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
   <div class="green-space"></div>
