--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
         <ul class="main-menu">
           <li class="main-menu-list">
             <a
-              href="#"
+              href="/wie-wij-zijn"
               aria-haspopup="true"
               class="main-menu-link {% if page.url contains 'team' %}current{% endif %}"
               >Wie wij zijn</a
@@ -88,10 +88,10 @@
           </li>
         </ul>
         <p class="btn btn-full btn-menu margin-top-2">
-          <a href="#"><i class="fa-solid fa-phone"></i> Bel ons</a>
+          <a href="tel:+31650835658"><i class="fa-solid fa-phone"></i> Bel ons</a>
         </p>
         <p class="btn btn-full btn-menu">
-          <a href="#"><i class="fa-solid fa-envelope"></i> Mail ons</a>
+          <a href="mailto: info@humanc.nl"><i class="fa-solid fa-envelope"></i> Mail ons</a>
         </p>
       </div>
     </nav>
