--- a/_layouts/teammembers.html
+++ b/_layouts/teammembers.html
@@ -17,7 +17,7 @@ menu: menu-active
           <div class="card-content">
             <p class="card-title">{{page.card_title}}</p>
             <p class="card-phone-number"><i class="fa-solid fa-phone"></i> {{page.phonenumber}}</p>
-            <p><i class="fa-solid fa-envelope"></i> {{page.email}}</a></p>
+            <p><i class="fa-solid fa-envelope"></i><a class="underline" href="mailto: {{page.email}}"> {{page.email}}</a> </a></p>
             <p class="card-title">{{page.soundbites}}</p>
             <p>{{page.soundbites_text}}</p>
           </div>
