--- a/_sass/helperclasses.scss
+++ b/_sass/helperclasses.scss
@@ -193,3 +193,7 @@ button[type="submit"].clr-black {
 .space-between {
   justify-content: space-between;
 }
+
+.underline:hover {
+  text-decoration: underline;
+}
